fix nav behaviour on mobile, also add highlight for target elements

--- a/assets/_scss/base/_globals.scss
+++ b/assets/_scss/base/_globals.scss
@@ -9,7 +9,7 @@ body {
   &, * {
     box-sizing: border-box;
 
-    &::selection {
+    &::selection, &:target {
       text-shadow: none;
       background: $yellow;
     }
